--- a/config/theme.css
+++ b/config/theme.css
@@ -6,6 +6,7 @@ font-family: 'Slackey'!important;
 font-smooth: always;
 outline: none !important;
 border: none !important;
+transition: all 0.25s ease-in-out;
 }
 :root {
   --primary: #16162b;
@@ -20,6 +21,10 @@ border: none !important;
   background-image: url("./images/bg.png") !important;
   outline: none !important;
 border: none !important;
+}
+.Logo
+{
+  user-select: none !important;
 }
 .Home
 {
@@ -41,6 +46,7 @@ background: var(--primary)
   outline: none !important;
   border: none !important;
   z-index: 0 !important;
+  user-select: none !important;
 }
 .Header
 {
@@ -102,4 +108,26 @@ a .ImgButton
 {
   user-select: none;
   cursor: not-allowed;
+}
+.disabled
+{
+  user-select: none !important;
+  cursor: not-allowed !important;
+  transition: all 0.1s ease-in-out;
+}
+.disabled:hover
+{
+  filter: opacity(0.5) !important;
+  transform: scale(0.9) !important;
+  font-size: 0.9em;
+  font-size-adjust: 1em;
+}
+.Icon
+{
+  transition: all 0.1s ease-in-out;
+}
+
+.Icon:hover
+{
+  transform: scale(0.8) !important;
 }
